# molt

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: icon-64.rgba
src/: lib.rs  main.rs  punch.rs  util.rs
src/formats/: mod.rs  rar.rs  sevenz.rs  stream.rs  zip.rs
tests/: encrypted.rs  roundtrip.rs
tests/data/: enc-hdr.7z  enc.7z
