[package]
name = "molt"
version = "7.2.1"
edition = "2021"
build = "build.rs"
description = "Extract archives without doubling your disk usage — the archive sheds its skin as files emerge."

[dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate", "bzip2", "aes-crypto"] }
eframe = { version = "0.29", optional = true }
egui_extras = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }
sevenz-rust2 = { version = "0.21.3", default-features = false, features = ["aes256", "bzip2", "deflate", "ppmd", "zstd"] }
unrar = "0.5.8"
tar = "0.4.46"
flate2 = "1.1.9"
xz2 = { version = "0.1.7", features = ["static"] }
zstd = "0.13.3"
bzip2 = "0.6.1"
rpassword = "7.5.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_IO", "Win32_System_Ioctl", "Win32_Storage_FileSystem", "Win32_UI_Shell"] }
winreg = { version = "0.56.0", optional = true }
windows = { version = "0.58", optional = true, features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_System_DataExchange",
] }
windows-core = { version = "0.58", optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
default = []
gui = ["dep:eframe", "dep:rfd", "dep:egui_extras", "dep:winreg", "dep:windows", "dep:windows-core"]

[[bin]]
name = "molt"
path = "src/main.rs"

[[bin]]
name = "molt-gui"
path = "src/bin/molt-gui/main.rs"
required-features = ["gui"]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3.27.0"
